  - Fixed: Drools exception when executing rules after controller xml has been reloaded (ORCJAVA-407)
  - Decode request path segments (Christian Bauer, ORCJAVA-471)
  - Update version of Restlet library used (fixed bug in Restlet thread management, ORCJAVA-476)
  - Add more logging information on connection failure
    when retrieving controller identity (ORCJAVA-459)

Controller Pro 1.1.0
====================

New Features:

  - Manage User Credentials in Controller. (Juha Lindfors, ORCJAVA-422)
  - Convert Beehive remote proxy service to blocking I/O (Marcus Redeker, ORCJAVA-411)
  - Clean up and consume input streams from HTTP connections
    in error cases to return connections to HTTP keep-alive
    pool (Juha Lindfors, ORCJAVA-454)

Bug Fixes:

  - Fix broken changes introduced to test suite in 
    mredeker/Controller_2_0_1_Beehive_Proxy branch, as 
    part of ORCJAVA-424  (Juha Lindfors, ORCJAVA-425)
  - Fix an issue with ORCJAVA-411 that used HTTP GET instead
    of HTTP POST for controller MAC address announcement -- 
    used when retrieving controller ID from a remote service
    (Juha Lindfors, ORCJAVA-450)

Controller Pro 1.0.14
=====================

Bug Fixes:

  - Fixed: Shell Execution Protocol does not destroy the spawned process (ORCJAVA-420)
  - Fixed: RRD4J URL Protocol generates incorrect URLs (ORCJAVA-441)

Controller Pro 1.0.13
=====================
	  
New Features:

  - Updated DSC Security System  to support EnvisaLink and improved current IT100 support
    (Greg Rapp, Phil Taylor, ORCJAVA-302)
  - Update logo to current version (ORCJAVA-429)
  - Update copyright date on home page (ORCJAVA-430)
  - Extend UDP listener to accept event values from a regexp group (ORCJAVA-392)

Controller 2.1.0 (2014-XX-XX Twin Galaxies)
===========================================

Bug Fixes:

  - Clean-up testApplicationContext.xml file (ORCJAVA-428)
  - Fixed : NPE while executing a gesture with a command linked to it (ORCJAVA-421)